pushing up completed hw's

--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@ body {
     background-image: url(./assets/HjIyYJ.jpg);
 }
 
+.image1 {
+    image-rendering: auto;
+    height: 350px;
+    width: 350px;
+    border-image-repeat: round;
+}
