--- a/style.css
+++ b/style.css
@@ -17,7 +17,29 @@ body {
 
 .image1 {
     image-rendering: auto;
-    height: 350px;
-    width: 350px;
+    height: 100%;
+    width: 100%;
     border-image-repeat: round;
+}
+
+.card {
+    background-color: whitesmoke;
+}
+
+.card-edit {
+    background-color: black;
+    color: whitesmoke;
+    opacity: 0.85;
+}
+
+.email {
+    color: whitesmoke
+}
+
+.font-email {
+    font-size: 24px;
+}
+
+P {
+    font-size: x-large;
 }
